# mynewt-nimble

./: .gitignore  CMakeLists.txt
nimble/host/include/host/: ble_gap.h
nimble/host/src/: ble_gap.c
porting/examples/linux/: Makefile  ble.c
porting/nimble/: Makefile.defs
porting/nimble/include/stats/: stats.h
porting/nimble/include/syscfg/: syscfg.h
porting/npl/linux/test/: Makefile
